Basic HTML Structure

--- a/app/public/cert.html
+++ b/app/public/cert.html
@@ -13,11 +13,7 @@
   <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-<<<<<<< HEAD
           <a class="navbar-brand" href="index.html">Oconee County Fire Rescue</a>
-=======
-          <a class="navbar-brand" href="index.html">Briley's Cyber Home</a>
->>>>>>> fc8054f5c0dc21f0f44ee5bce5858c8ee89db3b9
         </div>
         <ul id="menu">
           <li><a class="nav-link" href="index.html">Home</a></li>
@@ -32,13 +28,8 @@
       <div class="container">
       <!-- Logo -->
         <div id="logo">
-<<<<<<< HEAD
           <h1><a href="index.html">Welcome to Oconee County Fire Rescue</a></h1>
           <span>Oconee County, GA</span>
-=======
-          <h1><a href="index.html">Welcome to my Page!</a></h1>
-          <span>This is a fun site talking about my hobbies. You can know more about me as a person!</span>
->>>>>>> fc8054f5c0dc21f0f44ee5bce5858c8ee89db3b9
         </div>
       </div>
     </div>
@@ -48,9 +39,9 @@
     <div id="main">
       <div class="container">
         <header>
-          <h2 id="bigheader">Welcome to my Booklist</h2>
+          <h2 id="bigheader">Certification List</h2>
         </header>
-      <p>The followings are the books I want to read throughout this year. Feel free to add any of your favorite books. You could know my taste based on the list provided.</p>
+      <p>The followings are the certifications. Feel free to add, change, and delete.</p>
           <button type="button" class="btn btn-primary float-right goupper" data-toggle="modal" data-target="#exampleModal" >Add</button>
 
           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
