--- a/app/public/report.html
+++ b/app/public/report.html
@@ -13,17 +13,12 @@
   <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-<<<<<<< HEAD
           <a class="navbar-brand" href="index.html">Oconee Country Fire Rescue</a>
-=======
-          <a class="navbar-brand" href="index.html">Briley's Cyber Home</a>
->>>>>>> fc8054f5c0dc21f0f44ee5bce5858c8ee89db3b9
-        </div>
         <ul id="menu">
           <li><a class="nav-link" href="index.html">Home</a></li>
-          <li><a class="nav-link active" href="member.html">Member</a></li>
+          <li><a class="nav-link" href="member.html">Member</a></li>
           <li><a class="nav-link" href="cert.html">Certification</a></li>
-          <li><a class="nav-link" href="report.html">Report</a></li>
+          <li><a class="nav-link active" href="report.html">Report</a></li>
         </ul>
       </div>
     </nav>
@@ -32,13 +27,8 @@
       <div class="container">
       <!-- Logo -->
         <div id="logo">
-<<<<<<< HEAD
           <h1><a href="index.html">Welcome to Oconee County Fire Rescue</a></h1>
           <span>Oconee County, GA</span>
-=======
-          <h1><a href="index.html">Welcome to my Page!</a></h1>
-          <span>This is a fun site talking about my hobbies. You can know more about me as a person!</span>
->>>>>>> fc8054f5c0dc21f0f44ee5bce5858c8ee89db3b9
         </div>
       </div>
     </div>
@@ -46,11 +36,7 @@
 
   <!-- Main -->
 
-<<<<<<< HEAD
 
-=======
-  
->>>>>>> fc8054f5c0dc21f0f44ee5bce5858c8ee89db3b9
   <!-- Footer -->
   <footer id="footer">
       <div class="row pad"></div>
