Basic HTML Structure

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,6 +15,8 @@
   <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
+          <a class="navbar-brand" href="index.html">Oconee County Fire Rescue</a>
+        </div>
         <ul id="menu">
           <li><a class="nav-link active" href="index.html">Home</a></li>
           <li><a class="nav-link" href="member.html">Member</a></li>
