--- a/app/public/member.html
+++ b/app/public/member.html
@@ -14,6 +14,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">Oconee County Fire Rescue</a>
+        </div>
         <ul id="menu">
           <li><a class="nav-link" href="index.html">Home</a></li>
           <li><a class="nav-link active" href="member.html">Member</a></li>
