Finished Main Page

--- a/app/public/member.html
+++ b/app/public/member.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Book Page</title>
+  <title>Member Page</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -39,9 +39,9 @@
     <div id="main">
       <div class="container">
         <header>
-          <h2 id="bigheader">Welcome to my Booklist</h2>
+          <h2 id="bigheader">Welcome to my Member List</h2>
         </header>
-      <p>The followings are the books I want to read throughout this year. Feel free to add any of your favorite books. You could know my taste based on the list provided.</p>
+      <p>In this page you can see our former and current member. You can click each member to see the current and expired certifications for that person.</p>
           <button type="button" class="btn btn-primary float-right goupper" data-toggle="modal" data-target="#exampleModal" >Add</button>
 
           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
