--- a/app/public/cert.html
+++ b/app/public/cert.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Book Page</title>
+  <title>Certification Page</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
