Integrate PHP and Add button (acting little weird)

--- a/app/public/report.html
+++ b/app/public/report.html
@@ -8,6 +8,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="css\site.css">
+  <!-- Vue.js -->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-inverse">
@@ -36,8 +38,46 @@
   <!-- Header -->
 
   <!-- Main -->
+<div class="col-6">
+  <div id="Member" >
+   <form v-on:submit.prevent="fetchMember())" >
 
+      <h1>New Profile</h1>
+      <div class="form-group">
+        <label for="Name">User Name</label>
+        <input class="form-control" v-bind:value="userName" readonly>
+      </div>
 
+    <div class="form-group">
+      <label for="Email">Email</label>
+      <a v-bind:href=" 'mailto:' + userEmail">{{ userEmail }}</a></p>
+    </div>
+
+    <div class="form-group">
+      <label for="Image">User Image</label>
+      <a v-bind:href="userImgLarge">
+        <p v-if="userImgLarge"><img :src="userImgLarge" alt="userProfile"></p>
+        <p>source: {{ userImgLarge }}</p>
+      </a>
+    </div>
+    <div class="form-group">
+      <label for="Origin">Origin</label>
+      <input class="form-control" v-bind:value="userOrigin" readonly>
+    </div>
+    <div class="form-group">
+      <label for="Birthdate">Birthdate</label>
+      <input class="form-control" v-bind:value="formatDate(userDob)" readonly>
+    </div>
+    <div class="form-group">
+      <label for="Age">Age</label>
+      <input class="form-control" v-bind:value="userAge" readonly>
+    </div>
+  <button class="btn btn-primary">Meet New People</button>
+
+  </form>
+<p>If you want to meet another person, click the button below!</p>
+</div>
+</div>
   <!-- Footer -->
   <footer id="footer">
       <div class="row pad"></div>
@@ -51,14 +91,13 @@
         </center>
       </div>
   </footer>
-  <!-- Footer -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <!-- Include sort types you need -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"></script>
+
+  <script src="js/moment.app.js"></script>
   <script src='js/tablesort.min.js'></script>
   <script type="text/javascript" src="js/index.app.js"></script>
   <script>
