--- a/app/public/report.html
+++ b/app/public/report.html
@@ -40,7 +40,7 @@
   <!-- Main -->
 <div class="col-6">
   <div id="Member" >
-   <form v-on:submit.prevent="fetchMember())" >
+   <form v-on:submit.prevent="fetchMember()" >
 
       <h1>New Profile</h1>
       <div class="form-group">
